--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@types/react": "18.0.25",
     "autoprefixer": "10.4.7",
     "postcss": "8.4.14",
-    "tailwindcss": "^3.3.5",
-    "typescript": "5.2.2"
+    "tailwindcss": "^3.3.5"
+
   }
 }
